--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
     "date-fns": "^2.30.0",
+    "framer-motion": "^12.7.4",
     "react": "^19.1.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-day-picker": "^8.8.2",
     "react-dom": "^19.1.0",
-    "react-router-dom": "^7.5.0",
+    "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
     "recharts": "^2.15.2",
     "web-vitals": "^2.1.4"
